# Python-BE-React-FE

./: .gitignore  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: ingredients.py  router.py
backend/app/core/: config.py
backend/app/db/: client.py  seed.py
backend/app/models/: ingredient.py
backend/app/services/: ingredient_service.py
backend/tests/: test_ingredients.py
