[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nutritrack-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "boto3>=1.35",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "mangum>=0.19",          # FastAPI → AWS Lambda adapter
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",           # async test client
    "black>=24.8",
    "ruff>=0.6",
    "mypy>=1.11",
    "boto3-stubs[dynamodb]>=1.35",
    "moto[dynamodb]>=5.0",   # DynamoDB mock for tests
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
